--- a/app/views/ingredients/_form.html.slim
+++ b/app/views/ingredients/_form.html.slim
@@ -1,6 +1,6 @@
 /# locals: (ingredient:, recipe_id: nil)
 
-= default_form_for ingredient, data: { action: "submit->turbo-modal#justHideModal" } do |form|
+= default_form_for ingredient, data: { action: "submit->turbo-modal#close" } do |form|
   = form.input :recipe_id, as: :hidden, input_html: { value: recipe_id }
   = form.input :name, col_span: :full, autofocus: true
   = form.input :description, col_span: :full
