--- a/app/views/daily_plans/show.html.slim
+++ b/app/views/daily_plans/show.html.slim
@@ -1,18 +1,9 @@
+- title = "#{I18n.translate("date.day_names")[@daily_plan.date.wday]} #{@daily_plan.date.to_formatted_s(:date)}"
+
 - content_for :title do
-  = I18n.translate("date.day_names")[@daily_plan.date.wday]
-  = " "
-  = @daily_plan.date.to_formatted_s(:date)
+  = title
 
 = render "breadcrumbs", daily_plan: @daily_plan
 
-= turbo_frame_tag "modal" do
-  .modal-content.pb-16 data-controller="turbo-modal"
-    .flex.justify-between
-      h2.text-3xl
-        = I18n.translate("date.day_names")[@daily_plan.date.wday]
-        = " "
-        = @daily_plan.date.to_formatted_s(:date)
-      button data-action="click->turbo-modal#hideModal keyup@window->turbo-modal#closeWithKeyboard click@window->turbo-modal#closeBackground"
-        = icon(:x, height: 24)
-
-    = render "show_daily_plan", daily_plan: @daily_plan
+= modal(header: title) do
+  = render "show_daily_plan", daily_plan: @daily_plan
