--- a/app/views/ingredients/new.html.slim
+++ b/app/views/ingredients/new.html.slim
@@ -1,12 +1,7 @@
 - content_for :title, "přidat surovinu"
 
 - if params[:recipe_id].present?
-  = turbo_frame_tag "modal" do
-    .modal-content data-controller="turbo-modal"
-      .flex.justify-end
-        button data-action="click->turbo-modal#hideModal keyup@window->turbo-modal#closeWithKeyboard click@window->turbo-modal#closeBackground"
-          = icon(:x, height: 24)
-
-      == render "form", ingredient: @ingredient, recipe_id: params[:recipe_id]
+  = modal(header: "rychlé přidání suroviny") do
+    == render "form", ingredient: @ingredient, recipe_id: params[:recipe_id]
 - else
   == render "form", ingredient: @ingredient, recipe_id: params[:recipe_id]
