Add plausible tracking

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,6 +17,7 @@ html
     = javascript_importmap_tags
     = combobox_style_tag
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.turbo.min.js"></script>
+    <script defer data-domain="navarit.cz" src="https://plausible.jpeterka.cz/js/script.js"></script>
 
     <script src="https://cdn.rorvswild.com/agent.js"></script>
     javascript:
