--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -10,7 +10,10 @@
     span.font-bold = @recipe.category&.name
     - if @recipe.author != current_user
       = ", vytvořil/a "
-      span.font-bold = "#{@recipe.author.name}"
+      - if @recipe.author.name.present?
+        span.font-bold = @recipe.author.name
+      - else
+        span.italic neuvedeno
   .mt-2.sm:flex.justify-between
     .flex.flex-wrap id="#{dom_id(@recipe)}-labels"
       - @recipe.labels.sort_by(&:id).each do |label|
