--- a/feedback/app/views/feedback/comments/_form.html.erb
+++ b/feedback/app/views/feedback/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@post, Feedback::Comment.new] do |f| %>
+<%= form_for [@post, Feedback::Comment.new], class: "feedback--comment-form" do |f| %>
   <div class="field">
     <%= f.text_area :content %>
   </div>
