--- a/app/views/user_settings/show.html.slim
+++ b/app/views/user_settings/show.html.slim
@@ -3,10 +3,13 @@
 h2 o mě
 .grid.grid-cols-2.gap-4
   h3.font-bold jméno
-  p = current_user.full_name
+  p
+    = current_user.full_name
+    br
+    span.italic toto jméno je veřejně vidět jako jméno autora*ky u sdílených receptů
 
   h3.font-bold email
   p = current_user.email
 
-/ h2 změnit heslo
-/ = link_to "změnit heslo", edit_user_password_path
+h2 změnit heslo
+= link_to "změnit heslo", edit_user_registration_path
