Only load plausible on production

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,8 @@ html
     = javascript_importmap_tags
     = combobox_style_tag
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.turbo.min.js"></script>
-    <script defer data-domain="navarit.cz" src="https://plausible.jpeterka.cz/js/script.js"></script>
+    - if Rails.env.production?
+      <script defer data-domain="navarit.cz" src="https://plausible.jpeterka.cz/js/script.js"></script>
 
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.0/dist/trix.css">
     <script type="text/javascript" src="https://unpkg.com/trix@2.0.0/dist/trix.umd.min.js"></script>
