Improve a11y on frontpage

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -32,7 +32,7 @@ h1.text-4xl.text-center.mt-4.mb-4 navařit
                 br
                 | exportuj si seznam receptů nebo plán na táborový den.
         div
-            = image_tag "frontpage/event.png", class: "img-fluid"
+            = image_tag "frontpage/event.png", class: "img-fluid", alt: "Náhled ukázkové akce s jídelníčkem", size: "1469x596"
 
     hr
 
@@ -42,7 +42,7 @@ h1.text-4xl.text-center.mt-4.mb-4 navařit
             p
                 | vytvoření nákupního seznamu na jedno kliknutí? jasně!
         div
-            = image_tag "frontpage/shopping_list.png", class: "img-fluid"
+            = image_tag "frontpage/shopping_list.png", class: "img-fluid", alt: "Ukázka generovaného nákupního seznamu"
 
     hr
 
@@ -52,7 +52,7 @@ h1.text-4xl.text-center.mt-4.mb-4 navařit
             p
                 | měj po ruce svoje osvědčené recepty.
         div
-            = image_tag "frontpage/my_recipes.png", class: "img-fluid"
+            = image_tag "frontpage/my_recipes.png", class: "img-fluid", alt: "Náhled stránky se seznamem vlastních receptů"
 
     hr
 
@@ -64,7 +64,7 @@ h1.text-4xl.text-center.mt-4.mb-4 navařit
                 = link_to " společné databáze", published_recipes_path, style: "font-weight: 550;"
                 | .
         div
-            = image_tag "frontpage/public_recipes.png", class: "img-fluid"
+            = image_tag "frontpage/public_recipes.png", class: "img-fluid", alt: "Náhled stránky se sdílenými recepty"
 
 /     <div class="mb-5">
 /         <div class="row">
