--- a/app/views/shared/_public_navbar.html.slim
+++ b/app/views/shared/_public_navbar.html.slim
@@ -1,7 +1,7 @@
 nav.mb-4
   .flex.flex-wrap.items-center.md:py-3.px-4.mx-auto.bg-ocean-800
-    a href="/"
-      / img.h-12.mr-1 src=image_url("logos/logo.png") alt="navarit"
+    / a href="/"
+      img.h-12.mr-1 src=image_url("logos/logo.png") alt="navarit"
 
     / Desktop
     ul.font-medium.md:ms-2.md:ps-4.p-0.rounded-lg.md:space-x-8.md:mt-0.hidden.md:flex
