--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,7 +1,7 @@
 nav.mb-4.hidden.sm:block
     .flex.flex-wrap.items-center.py-3.px-4.mx-auto.bg-ocean-800
-        a href="/"
-            / img.h-12.mr-1 src=image_url("logos/logo.png") alt="navarit"
+        / a href="/"
+            img.h-12.mr-1 src=image_url("logos/logo.png") alt="navarit"
 
         ul.flex.flex-row.space-x-8.font-medium.ms-2.ps-4.cursor-pointer.p-0.rounded-lg
             = render "shared/navbar_link", link: dashboard_path, icon: :house, text: "domů"
