--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -87,7 +87,7 @@ h1.text-4xl.text-center.mt-4.mb-4 navařit
 footer.fixed.w-full.bottom-0.pb-3.pt-7.text-sm.ms-2.bg-gradient-to-b.from-transparent.via-white.to-white
     .pt-2
         | s 💚 vyrobil
-        = link_to " Obr ", "https://jpeterka.cz", target: "_blank", class: "text-emerald-900"
+        = link_to " Obr ", "https://jpeterka.cz", target: "_blank", class: "text-ocean-900"
         | pro
-        = link_to " Fons Beníšky", "https://fons.skauting.cz", target: "_blank", class: "text-emerald-900"
+        = link_to " Fons Beníšky", "https://fons.skauting.cz", target: "_blank", class: "text-ocean-900"
         |  a další kuchařstvo
