--- a/app/views/ingredients/index.html.slim
+++ b/app/views/ingredients/index.html.slim
@@ -10,7 +10,7 @@
 = turbo_frame_tag :ingredients
   = table @ingredients do |t|
     = t.column :jméno do |ingredient|
-      = link_to ingredient.name, ingredient, class: "font-bold text-emerald-600", data: { turbo_frame: "_top" }
+      = link_to ingredient.name, ingredient, class: "font-bold", data: { turbo_frame: "_top" }
       - if ingredient.common?
         = icon(:globe, class: "ms-1")
     = t.column :kategorie do |ingredient|
