--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,12 +7,17 @@ html lang="cs"
       = yield(:title).presence
 
     meta name="viewport" content="width=device-width,initial-scale=1"
+    meta name="apple-mobile-web-app-capable" content="yes"
+
     = turbo_refreshes_with method: :morph, scroll: :preserve
     = yield :head
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
+
+    link rel="manifest" href="/manifest.json"
+
     = javascript_importmap_tags
     = combobox_style_tag
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.turbo.min.js"></script>
