--- a/app/views/recipes/_recipe_card.html.slim
+++ b/app/views/recipes/_recipe_card.html.slim
@@ -8,14 +8,18 @@
             .grid.grid-cols-2
                 = link_to(recipe.name, path_to_recipe, data: { turbo_frame: "_top" })
                 .text-right
-                    - if recipe.liked_by?(current_user)
-                        = button_to liked_recipe_path(recipe), method: :delete, class: "inline-block" do
-                            = icon("heart", style: :fill, class: "animate-heartbeat")
-                            = recipe.reactions.size
+                    - if current_user
+                        - if recipe.liked_by?(current_user)
+                            = button_to liked_recipe_path(recipe), method: :delete, class: "inline-block" do
+                                = icon("heart", style: :fill, class: "animate-heartbeat")
+                                = recipe.reactions.size
+                        - else
+                            = button_to liked_recipes_path(recipe_id: recipe.id), method: :post, class: "inline-block" do
+                                = icon("heart", class: "animate-heartbeat")
+                                = recipe.reactions.size
                     - else
-                        = button_to liked_recipes_path(recipe_id: recipe.id), method: :post, class: "inline-block" do
-                            = icon("heart", class: "animate-heartbeat")
-                            = recipe.reactions.size
+                        = icon("heart")
+                        = recipe.reactions.size
 
         = card.with_body do
             .grid.grid-cols-2
