--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -19,4 +19,5 @@ nav.mb-4.hidden.sm:block
                 ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"
                     li.ps-2.my-2 = link_to "admininstrace", "/a", class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4" if current_user.admin?
                     li.ps-2.my-2 = link_to "nastavení", user_settings_path, class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4"
+                    li.ps-2.my-2 = link_to "co je nového?", changelog_path, class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4"
                     li.ps-2.my-2 = button_to "odhlásit se", destroy_user_session_path, method: :delete, class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4"
