Add feedback to changelog

--- a/app/views/index/changelog.html.slim
+++ b/app/views/index/changelog.html.slim
@@ -1,6 +1,22 @@
 - content_for :title, "co je nového?"
 
-h2 vydali jsme navařit (1. 1. 2024)
+.mb-5
+  h2 dejte nám zpětnou vazbu! (1. 11. 2024)
+  p
+    | Něco se vám nelíbí? Něco vám chybí? Něco nefunguje?
+    br
+    | Dejte nám to vědět!
+
+  p
+    | Dřív to šlo hlavně přes
+    => link_to("mail", "mailto:obr+navarit@skaut.cz")
+    | , teď už i přímo v aplikaci.
+  p
+    | Sekci na zpětnou vazbu najdete po přihlášení v pravém horním rohu po rozkliknutí menu.
+
+hr
+
+h2 vydali jsme navařit (1. 11. 2024)
 p
   | Před čtyřmi lety vznikl pro kuchařstvo kurzu Fons Beníšky webová aplikace
   span.italic =< "Skautská kuchařka."
