Improve changelog formatting

--- a/app/views/index/changelog.html.slim
+++ b/app/views/index/changelog.html.slim
@@ -9,7 +9,7 @@
 
   p
     | Dřív to šlo hlavně přes
-    => link_to("mail", "mailto:obr+navarit@skaut.cz")
+    =< link_to("mail", "mailto:obr+navarit@skaut.cz")
     | , teď už i přímo v aplikaci.
   p
     | Sekci na zpětnou vazbu najdete po přihlášení v pravém horním rohu po rozkliknutí menu.
@@ -40,7 +40,7 @@ p.mt-3
   | Pokud jste ji ještě nezkoušeli, tak budu rád, když dáte navařit šanci teď (a taky mi dáte vědět).
   br
   | Pište
-  => link_to(" na mail", "mailto:obr+navarit@skaut.cz")
+  =<> link_to(" na mail", "mailto:obr+navarit@skaut.cz")
   | (brzo přidám možnost posílat zpětnou vazbu přímo z aplikace)
 
 p
