--- a/app/views/recipes/_recipe_card.html.slim
+++ b/app/views/recipes/_recipe_card.html.slim
@@ -5,8 +5,9 @@
 = turbo_frame_tag dom_id(recipe), data: { "controller": "clickable", "clickable-url-value": path_to_recipe }
     = render CardComponent.new(recipe, class:) do |card|
         = card.with_heading do
-            .grid.grid-cols-2
-                = link_to(recipe.name, path_to_recipe, data: { turbo_frame: "_top" })
+            .grid.grid-cols-4
+                .col-span-3
+                    = link_to(recipe.name, path_to_recipe, data: { turbo_frame: "_top" }, class: "font-medium")
                 .text-right
                     - if current_user
                         - if recipe.liked_by?(current_user)
