Show procedure in Event cookbook

--- a/app/views/event_cookbooks/show.html.slim
+++ b/app/views/event_cookbooks/show.html.slim
@@ -8,4 +8,4 @@
     h2.text-2xl = formatted_date(daily_plan.date)
     - daily_plan.recipes.each do |recipe|
         h3.text-xl.font-bold = recipe.name
-        p = recipe.description
+        p = recipe.procedure
