--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -56,9 +56,10 @@
         - if @recipe.procedure?
           = @recipe.procedure
         - else
-          = render CardComponent.new(class: "sm:w-1/3 border-gray-300", shadow: false) do |c|
+          = render CardComponent.new(class: "w-1/3 md:w-1/2 border-gray-300", shadow: false) do |c|
             = c.with_body do
-              span.italic = "recept nemá zadaný postup"
+              p.italic = "recept nemá zadaný postup"
+              p.italic = "tip: recepty bez postupu nejde zveřejnit."
 
     - if @edited_section == :tasks
       = render "tasks_edit", recipe: @recipe
