Correct missing comma

--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -13,7 +13,7 @@
       "purpose": "maskable"
     }
   ],
-  "id": "navarit"
+  "id": "navarit",
   "start_url": "/",
   "display": "standalone",
   "scope": "/",
