--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,7 @@ html lang="cs"
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = stylesheet_link_tag "feedback/application"
 
-    link rel="manifest" href="/manifest.json"
+    = tag.link rel: "manifest", href: pwa_manifest_path(format: :json)
 
     = javascript_importmap_tags
     = combobox_style_tag
