--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -22,7 +22,7 @@ nav.mb-4.hidden.sm:block
                             = "feedback"
                             - if current_user.feedback_notifications.unread.any?
                                 = " (#{current_user.feedback_notifications.unread.count} upozornění)"
-                    li.ps-2.my-2 = link_to "admininstrace", "/a", class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4" if current_user.admin?
+                    li.ps-2.my-2 = link_to "administrace", "/a", class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4" if current_user.admin?
                     li.ps-2.my-2 = link_to "nastavení", user_settings_path, class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4"
                     li.ps-2.my-2 = link_to "co je nového?", changelog_path, class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4"
                     li.ps-2.my-2 = button_to "odhlásit se", destroy_user_session_path, method: :delete, class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4"
