--- a/app/views/index/changelog.html.slim
+++ b/app/views/index/changelog.html.slim
@@ -1,6 +1,23 @@
 - content_for :title, "co je nového?"
 
 .mb-5
+  h2 průběžné úpravy a opravy (2. 1. 2025)
+  | Nic velkého, ale i
+  span.italic =< "navařit"
+  | potřebuje občas trochu péče.
+
+  p
+    ul.list-disc.pl-4
+    li.my-2 Pokud jste měli registraci přes Google, a snažili jste se přihlásit heslem, ukazovala se stránka "Něco se rozbilo". Po opravě už se zobrazuje správně informace o chybném hesle, což snad lépe popisuje, co je za problém.
+      br
+      | Tip: Vždycky si můžete přes "zapomenuté heslo" nechat poslat do mailu návod, jak si změnit (nebo vytvořit) heslo, pokud se do účtu nemůžete dostat.
+    li.my-2 Pod kapotou jsme aktualizovali používané knihovny na nejnovější verze, což je nutnost pro dlouhodobé udržení moderní, bezpečné a funkční aplikace
+    li.my-2 Recepty jde nově zveřejnit jen pokud mají suroviny a popis.
+    li.my-2 Množství surovin jsem dosud ukládal jako desetinné číslo s více desetinnými místy, což ale občas vede k divným zaokrouhlením. Měním je tedy na číslo se dvěma desetinnými místy, což by mělo pro přesnost receptů stačit. Může se ale stát, že se někomu číslo drobně změní.
+
+hr
+
+.mb-5
   h2 dejte nám zpětnou vazbu! (1. 11. 2024)
   p
     | Něco se vám nelíbí? Něco vám chybí? Něco nefunguje?
