Remove dark: styles from navigation

--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -15,8 +15,8 @@ nav.mb-4.hidden.sm:block
                 = current_user.name || current_user.email
                 = icon("caret-down", class: "ml-1 w-4 h-4 text-white")
 
-            div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
-                ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"
+            div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44"
+                ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdownDefaultButton"
                     li.ps-2
                         = link_to feedback_path, class: "hover:underline hover:emerald-600 hover:decoration-emerald-700 hover:decoration-4" do
                             = "feedback"
