--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -1,4 +1,4 @@
-= default_form_for event, html: { class: "grid grid-cols-12" } do |form|
+= default_form_for event do |form|
   = form.input :name, col_span: :full, autofocus: true
   = form.input :date_from, as: :date, col_span: 3
   = form.input :date_to, as: :date, col_span: 3
