--- a/app/views/index/changelog.html.slim
+++ b/app/views/index/changelog.html.slim
@@ -1,6 +1,15 @@
 - content_for :title, "co je nového?"
 
 .mb-5
+  h2 prezentace na ELŠ a oprava zobrazení vytváření akce na mobilu (9. 2. 2025)
+  p
+    | Dnes jsem představil
+    span.italic =<> "navařit"
+    | na Ekumenické lesní škole v rámci bloku o tom, jak lépe a snáz vařit na akcích.
+    br
+    | Jedním z účastníků jsem byl upozorněn, že vytváření nové akce se na mobilu zobrazí nepožitelně, tak to opravuju.
+
+.mb-5
   h2 oprava chyby v načítání úkolů na akci (8. 2. 2025)
   p
     | Dneska dorazila zajímavá chyba - pokud byl na akci recept s úkolem, který bylo potřeba udělat dřív než v týdnu, kdy akce začíná (např. akce začíná v pondělí, v pondělí je k jídlu hummus, který má úkol "naložit cizrnu 3 dny předem"), stránka akce se nenačetla.
