--- a/app/views/index/changelog.html.slim
+++ b/app/views/index/changelog.html.slim
@@ -1,82 +1,80 @@
 - content_for :title, "co je nového?"
 
-.mb-5
-  h2 prezentace na ELŠ a oprava zobrazení vytváření akce na mobilu (9. 2. 2025)
-  p
-    | Dnes jsem představil
+#changelog.grid.grid-cols-1.space-y-4
+  article
+    h2 prezentace na ELŠ a oprava zobrazení vytváření akce na mobilu (9. 2. 2025)
+    p
+      | Dnes jsem představil
+      span.italic =<> "navařit"
+      | na Ekumenické lesní škole v rámci bloku o tom, jak lépe a snáz vařit na akcích.
+      br
+      | Jedním z účastníků jsem byl upozorněn, že vytváření nové akce se na mobilu zobrazí nepožitelně, tak to opravuju.
+
+  article
+    h2 oprava chyby v načítání úkolů na akci (8. 2. 2025)
+    p
+      | Dneska dorazila zajímavá chyba - pokud byl na akci recept s úkolem, který bylo potřeba udělat dřív než v týdnu, kdy akce začíná (např. akce začíná v pondělí, v pondělí je k jídlu hummus, který má úkol "naložit cizrnu 3 dny předem"), stránka akce se nenačetla.
+      br
+      | Řešení tedy bylo rozsah akce pro vykreslení odvodit ne z rozsahu akce, ale podívat se, kdy jsou v akci nějaké úkoly. To bohužel načítání stránky akce asi o něco zpomalí, ale aspoň bude fungovat i v takovéhle situaci.
+
+  article
+    h2 průběžné úpravy a opravy (2. 1. 2025)
+    | Nic velkého, ale i
     span.italic =<> "navařit"
-    | na Ekumenické lesní škole v rámci bloku o tom, jak lépe a snáz vařit na akcích.
-    br
-    | Jedním z účastníků jsem byl upozorněn, že vytváření nové akce se na mobilu zobrazí nepožitelně, tak to opravuju.
+    | potřebuje občas trochu péče.
 
-.mb-5
-  h2 oprava chyby v načítání úkolů na akci (8. 2. 2025)
-  p
-    | Dneska dorazila zajímavá chyba - pokud byl na akci recept s úkolem, který bylo potřeba udělat dřív než v týdnu, kdy akce začíná (např. akce začíná v pondělí, v pondělí je k jídlu hummus, který má úkol "naložit cizrnu 3 dny předem"), stránka akce se nenačetla.
-    br
-    | Řešení tedy bylo rozsah akce pro vykreslení odvodit ne z rozsahu akce, ale podívat se, kdy jsou v akci nějaké úkoly. To bohužel načítání stránky akce asi o něco zpomalí, ale aspoň bude fungovat i v takovéhle situaci.
+    p
+      ul.list-disc.pl-4
+        li.my-2
+          | Pokud jste měli registraci přes Google, a snažili jste se přihlásit heslem, ukazovala se stránka "Něco se rozbilo". Po opravě už se zobrazuje správně informace o chybném hesle, což snad lépe popisuje, co je za problém.
+          br
+          span.italic
+            | Tip: Vždycky si můžete přes "zapomenuté heslo" nechat poslat do mailu návod, jak si změnit (nebo vytvořit) heslo, pokud se do účtu nemůžete dostat.
+        li.my-2 Pod kapotou jsme aktualizovali používané knihovny na nejnovější verze, což je nutnost pro dlouhodobé udržení moderní, bezpečné a funkční aplikace
+        li.my-2 Recepty jde nově zveřejnit jen pokud mají suroviny a popis.
+        li.my-2 Množství surovin jsem dosud ukládal jako desetinné číslo s více desetinnými místy, což ale občas vede k divným zaokrouhlením. Měním je tedy na číslo se dvěma desetinnými místy, což by mělo pro přesnost receptů stačit. Může se ale stát, že se někomu číslo drobně změní.
 
-.mb-5
-  h2 průběžné úpravy a opravy (2. 1. 2025)
-  | Nic velkého, ale i
-  span.italic =<> "navařit"
-  | potřebuje občas trochu péče.
+  article
+    h2 dejte nám zpětnou vazbu! (1. 11. 2024)
+    p
+      | Něco se vám nelíbí? Něco vám chybí? Něco nefunguje?
+      br
+      | Dejte nám to vědět!
 
-  p
-    ul.list-disc.pl-4
-      li.my-2
-        | Pokud jste měli registraci přes Google, a snažili jste se přihlásit heslem, ukazovala se stránka "Něco se rozbilo". Po opravě už se zobrazuje správně informace o chybném hesle, což snad lépe popisuje, co je za problém.
-        br
-        span.italic
-          | Tip: Vždycky si můžete přes "zapomenuté heslo" nechat poslat do mailu návod, jak si změnit (nebo vytvořit) heslo, pokud se do účtu nemůžete dostat.
-      li.my-2 Pod kapotou jsme aktualizovali používané knihovny na nejnovější verze, což je nutnost pro dlouhodobé udržení moderní, bezpečné a funkční aplikace
-      li.my-2 Recepty jde nově zveřejnit jen pokud mají suroviny a popis.
-      li.my-2 Množství surovin jsem dosud ukládal jako desetinné číslo s více desetinnými místy, což ale občas vede k divným zaokrouhlením. Měním je tedy na číslo se dvěma desetinnými místy, což by mělo pro přesnost receptů stačit. Může se ale stát, že se někomu číslo drobně změní.
+    p
+      | Dřív to šlo hlavně přes
+      =< link_to("mail", "mailto:obr+navarit@skaut.cz")
+      | , teď už i přímo v aplikaci.
+    p
+      | Sekci na zpětnou vazbu najdete po přihlášení v pravém horním rohu po rozkliknutí menu.
 
-hr
+  article
+    h2 vydali jsme navařit (1. 11. 2024)
+    p
+      | Před čtyřmi lety vznikl pro kuchařstvo kurzu Fons Beníšky webová aplikace
+      span.italic =< "Skautská kuchařka."
+      br
+      | Tu od té doby zkusilo skoro 800 lidí, kteří si tam přidali téměř 2000 receptů, z toho přes 200 je jich sdílených - může je tedy využít každý.
+      br
+      | Skoro 300 lidí si zkusilo vytvořit i akci, kterých bylo celkově do aplikace zadaných skoro 400.
 
-.mb-5
-  h2 dejte nám zpětnou vazbu! (1. 11. 2024)
-  p
-    | Něco se vám nelíbí? Něco vám chybí? Něco nefunguje?
-    br
-    | Dejte nám to vědět!
+    p
+      | Dneska, po roce práce, vydáváme novou verzi.
+      ul.list-disc.pl-4
+        li.my-2 Přejmenovali jsme se na navařit - abychom dali najevo, že nejsme jenom pro skauty, ale pro všechny kdo vaří. A abychom nemátli podobností s publikací Skautská kuchařka vydané TDC.
+        li.my-2 Kompletně jsme předělali design - za pomoci designéra Ondry jsme vymysleli nový vzhled a příjemnějí používání. Práce není finální, budeme dál vylepšovat co se dá.
+        li.my-2 A na pozadí jsme změnili i všechny technologie - to by se mělo projevit na rychlejší aplikaci, a hlavně snazšímu vylepšování do budoucna
 
-  p
-    | Dřív to šlo hlavně přes
-    =< link_to("mail", "mailto:obr+navarit@skaut.cz")
-    | , teď už i přímo v aplikaci.
-  p
-    | Sekci na zpětnou vazbu najdete po přihlášení v pravém horním rohu po rozkliknutí menu.
+    p.mt-3
+      | Taková velká změna samozřejmě může přinést i nějaké drobné mouchy, budu se snažit je co nejrychleji řešit.
+      br
+      | Jestli jste kuchařku používali, mrkněte se, jak vypadá v novém a dejte mi vědět, co na ni říkáte.
+      br
+      | Pokud jste ji ještě nezkoušeli, tak budu rád, když dáte navařit šanci teď (a taky mi dáte vědět).
+      br
+      | Pište
+      =<> link_to(" na mail", "mailto:obr+navarit@skaut.cz")
+      | (brzo přidám možnost posílat zpětnou vazbu přímo z aplikace)
 
-hr
-
-h2 vydali jsme navařit (1. 11. 2024)
-p
-  | Před čtyřmi lety vznikl pro kuchařstvo kurzu Fons Beníšky webová aplikace
-  span.italic =< "Skautská kuchařka."
-  br
-  | Tu od té doby zkusilo skoro 800 lidí, kteří si tam přidali téměř 2000 receptů, z toho přes 200 je jich sdílených - může je tedy využít každý.
-  br
-  | Skoro 300 lidí si zkusilo vytvořit i akci, kterých bylo celkově do aplikace zadaných skoro 400.
-
-p.mt-3
-  | Dneska, po roce práce, vydáváme novou verzi.
-  ul.list-disc.pl-4
-    li.my-2 Přejmenovali jsme se na navařit - abychom dali najevo, že nejsme jenom pro skauty, ale pro všechny kdo vaří. A abychom nemátli podobností s publikací Skautská kuchařka vydané TDC.
-    li.my-2 Kompletně jsme předělali design - za pomoci designéra Ondry jsme vymysleli nový vzhled a příjemnějí používání. Práce není finální, budeme dál vylepšovat co se dá.
-    li.my-2 A na pozadí jsme změnili i všechny technologie - to by se mělo projevit na rychlejší aplikaci, a hlavně snazšímu vylepšování do budoucna
-
-p.mt-3
-  | Taková velká změna samozřejmě může přinést i nějaké drobné mouchy, budu se snažit je co nejrychleji řešit.
-  br
-  | Jestli jste kuchařku používali, mrkněte se, jak vypadá v novém a dejte mi vědět, co na ni říkáte.
-  br
-  | Pokud jste ji ještě nezkoušeli, tak budu rád, když dáte navařit šanci teď (a taky mi dáte vědět).
-  br
-  | Pište
-  =<> link_to(" na mail", "mailto:obr+navarit@skaut.cz")
-  | (brzo přidám možnost posílat zpětnou vazbu přímo z aplikace)
-
-p
-  | Těším se, co spolu navaříme!
+    p
+      | Těším se, co spolu navaříme!
