--- a/app/views/index/changelog.html.slim
+++ b/app/views/index/changelog.html.slim
@@ -2,6 +2,11 @@
 
 #changelog.grid.grid-cols-1.space-y-4
   article
+    h2 oprava vytváření a duplikace receptů (8. 3. 2025)
+    p
+      | V projektu byla drobná chyba, kdy suroviny bez množství znemožnily duplikovat recept.
+
+  article
     h2 prezentace na ELŠ a oprava zobrazení vytváření akce na mobilu (9. 2. 2025)
     p
       | Dnes jsem představil
