--- a/app/views/event_portion_types/index.html.slim
+++ b/app/views/event_portion_types/index.html.slim
@@ -14,13 +14,13 @@ div id="#{dom_id(@event)}-portion-types"
   br
   span = "počet porcí: #{@event.portion_count}"
 
-  = heading("Typy porcí pro událost")
+  = heading("typy porcí pro událost")
   - @event_portion_types.each do |event_portion_type|
     == render event_portion_type
 
-  = heading("Jinde použité typy porcí")
+  = heading("jinde použité typy porcí")
   - @unused_portion_types.each do |portion_type|
-    == render "event_portion_type", portion_type:, event: @event
+    = render "event_portion_type", portion_type:, event: @event
 
-  = heading("Přidat nový typ porcí")
-  == render "event_portion_type", portion_type: PortionType.new, event: @event
+  = heading("přidat nový typ porcí")
+  = render "event_portion_type", portion_type: PortionType.new, event: @event
