--- a/app/views/shared/_navbar_link.html.slim
+++ b/app/views/shared/_navbar_link.html.slim
@@ -1,7 +1,8 @@
 /# locals: (link:, classes: "", icon: nil, text: nil)
+/ data-controller="clickable" data-clickable-url-value=link
 
-li.group.rounded-md.py-2.px-2.hover:bg-peach-200
-    a href=link class=classes label=text
-        span.block.py-4.pl-3.pr-4.font-bold.rounded.md:border-0.md:p-0.text-white.group-hover:text-black
+li
+    a.group.rounded-md href=link class=classes label=text
+        span.block.py-2.px-2.font-bold.rounded-md.border-0.text-white.hover:text-black.hover:bg-peach-200
             = icon(icon.to_s, class: "inline me-1") if icon.present?
             = text if text.present?
