Correct showing added event portion types

--- a/app/views/event_portion_types/_event_portion_type.html.slim
+++ b/app/views/event_portion_types/_event_portion_type.html.slim
@@ -1,4 +1,5 @@
-/# locals: (event:, portion_type: nil)
+/# locals: (event:, portion_type: nil, event_portion_type: nil)
+/ Either provide portion_type or event_portion_type
 
 - event_portion_type ||= EventPortionType.new(portion_type:, event:)
 - portion_type ||= event_portion_type.portion_type
