--- a/app/views/event_portion_types/index.html.slim
+++ b/app/views/event_portion_types/index.html.slim
@@ -16,7 +16,7 @@ div id="#{dom_id(@event)}-portion-types"
 
   = heading("typy porcí pro událost")
   - @event_portion_types.each do |event_portion_type|
-    == render event_portion_type
+    = render "event_portion_type", event: @event, event_portion_type: event_portion_type
 
   = heading("jinde použité typy porcí")
   - @unused_portion_types.each do |portion_type|
