Add changelog for 8.5.2025

--- a/app/views/index/changelog.html.slim
+++ b/app/views/index/changelog.html.slim
@@ -2,6 +2,13 @@
 
 #changelog.grid.grid-cols-1.space-y-4
   article
+    h2 lepší menu, oprava drobných chyb (8. 5. 2025)
+    p
+      | Tlačítka v menu dřív na některých místech nereagovala na kliknutí. To už by se nemělo dít
+      br
+      | Opravil jsem chybu na přehledu velikosti porcí u akce
+
+  article
     h2 oprava vytváření a duplikace receptů (8. 3. 2025)
     p
       | V projektu byla drobná chyba, kdy suroviny bez množství znemožnily duplikovat recept.
