Feedback module: Show email if name is not set

--- a/plugins/feedback/app/views/feedback/admin/posts/_post.html.erb
+++ b/plugins/feedback/app/views/feedback/admin/posts/_post.html.erb
@@ -5,7 +5,7 @@
     </p>
 
     <p>
-      <strong>By:</strong> <%= post.creator.name %>
+      <strong>By:</strong> <%= post.creator.name || post.creator.email %>
     </p>
 
     <p>
