--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,10 +1,21 @@
 - content_for :title, "akce"
 
+- if @events.active.current.any?
+  #current-events
+    h2.mb-3
+      = icon(:calendar, class: "mr-2")
+      = "právě probíhá".upcase
+
+    .md:grid.grid-cols-1
+      - @events.active.current.each do |event|
+        = render "events/card", event:
+
 .mb-2
   - placeholder = current_user.events.order("RAND()").limit(1).first&.name
   = searchbox(path: events_path, placeholder: placeholder, target_turbo_frame: "events")
 
 = turbo_frame_tag :events, target: "_top"
+
   #future-events
     .flex.justify-between.mt-6
       h2.mb-3
