Correct showing author of feedback comment

--- a/plugins/feedback/app/views/feedback/comments/_comment.html.erb
+++ b/plugins/feedback/app/views/feedback/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div class="feedback--comment-row">
     <div class="feedback--comment <%= "feedback--my-comment" if comment.creator == current_user %>">
-        <strong> <%= comment.creator&.name || "App Admin" %> </strong>:
+        <strong> <%= comment.creator&.name || comment.creator.email %> </strong>:
         <%= comment.content %>
         <br>
 
